# password-manager-wasm-example

./: .gitignore  CMakeLists.txt  README.md  build.bat  build.sh  package-lock.json  package.json  password_manager.cpp  password_storage.cpp  tsconfig.json  webpack.config.js
src/: index.html  index.js  index.ts  password_manager.d.ts  password_manager.js  password_manager.wasm
